fixed tie with bust

--- a/bj.ipynb
+++ b/bj.ipynb
@@ -95,14 +95,14 @@
     "            player_cards.append(rand_card(deck_func=deck_current))\n",
     "            player_score = score(player_cards)\n",
     "            if(player_score==-1):\n",
-    "                game_state='L'\n",
+    "                game_state='Loss'\n",
     "            else:\n",
     "                game_state='S'\n",
     "        if(strategy=='H'):\n",
     "            player_cards.append(rand_card(deck_func=deck_current))\n",
     "            player_score = score(player_cards)\n",
     "            if(player_score==-1):\n",
-    "                game_state='L'\n",
+    "                game_state='Loss'\n",
     "        if(strategy=='S'):\n",
     "            game_state='S'\n",
     "        \n",
@@ -156,36 +156,35 @@
      "output_type": "stream",
      "text": [
       "##############\n",
-      "21:21.972%\n",
-      "20:25.175%\n",
-      "19:14.888%\n",
-      "18:11.382%\n",
-      "17:7.856%\n",
-      "16:3.723%\n",
-      "15:3.914%\n",
-      "14:4.024%\n",
-      "13:4.214%\n",
-      "12:2.771%\n",
-      "11:0.082%\n",
+      "21:21.937%\n",
+      "20:25.144%\n",
+      "19:14.813%\n",
+      "18:11.416%\n",
+      "17:7.892%\n",
+      "16:3.709%\n",
+      "15:3.962%\n",
+      "14:4.039%\n",
+      "13:4.224%\n",
+      "12:2.784%\n",
+      "11:0.08%\n",
       "##############\n",
-      "21:5.739%\n",
-      "20:22.925%\n",
-      "19:12.803%\n",
-      "18:13.596%\n",
-      "17:14.853%\n",
-      "-1:30.085%\n",
+      "21:7.96%\n",
+      "20:32.822%\n",
+      "19:18.313%\n",
+      "18:19.564%\n",
+      "17:21.341%\n",
       "##############\n",
-      "20:4.389%\n",
-      "19:8.114%\n",
-      "18:11.949%\n",
-      "17:16.723%\n",
-      "16:5.869%\n",
-      "15:6.115%\n",
-      "14:6.145%\n",
-      "13:6.54%\n",
-      "12:4.104%\n",
+      "20:4.026%\n",
+      "19:7.492%\n",
+      "18:11.185%\n",
+      "17:15.426%\n",
+      "16:5.302%\n",
+      "15:5.659%\n",
+      "14:5.687%\n",
+      "13:5.996%\n",
+      "12:3.798%\n",
       "11:0.107%\n",
-      "-1:29.946%\n"
+      "-1:35.322%\n"
      ]
     }
    ],
@@ -205,17 +204,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 7,
    "id": "e6baf58d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('Win', 21, 12)"
+       "('Win', 18, 14)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 15,
    "id": "8b48de42",
    "metadata": {
     "scrolled": true
@@ -290,14 +289,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[18, 17, 15, 15, 14, 7]\n",
-      "[17, 15, 13, 10, 9, 8]\n",
-      "[16, 16, 12, 11, 10, 9]\n",
-      "[15, 13, 13, 12, 10, 7]\n"
+      "[18, 16, 15, 14, 14, 10]\n",
+      "[17, 17, 14, 12, 11, 7]\n",
+      "[17, 15, 14, 13, 8, 7]\n",
+      "[17, 16, 16, 13, 7, 7]\n"
      ]
     }
    ],
    "source": [
+    "#min score 7\n",
     "for _ in range(4):\n",
     "    player = []\n",
     "    for _ in range(6):\n",
@@ -307,17 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 42,
    "id": "21968c8a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('L', 1)"
+       "('Win', 0, 20)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 18,
    "id": "10de90f9",
    "metadata": {},
    "outputs": [
@@ -390,14 +390,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[21, -1, -1, -2, -2, -3]\n",
-      "[20, 20, 19, 17, 17, 16]\n",
-      "[19, 19, 17, 16, 14, 11]\n",
-      "[19, 18, 18, 17, 14, -3]\n"
+      "[18, 18, 17, 11, 10, 10]\n",
+      "[17, 14, 14, 13, 12, 7]\n",
+      "[17, 13, 12, 12, 11, 7]\n",
+      "[19, 17, 17, 16, 11, 9]\n"
      ]
     }
    ],
    "source": [
+    "#min score 7\n",
     "for _ in range(4):\n",
     "    cum_loss=0\n",
     "    player = []\n",
@@ -407,7 +408,7 @@
     "        cum_loss = game[1]\n",
     "        \n",
     "        if(game[0]=='Win'):            \n",
-    "            player.append(game[2])\n",
+    "            player.append(max(game[2]-3,7))\n",
     "        \n",
     "    print(sorted(player, reverse=True))"
    ]
