added comments and expanded bj_round func

--- a/bj.ipynb
+++ b/bj.ipynb
@@ -8,12 +8,18 @@
    "outputs": [],
    "source": [
     "import random\n",
+    "from collections import Counter\n",
     "\n",
     "DECK_COMPLETE = [2, 3, 4, 5, 6, 7, 8, 9, 10, 'J', 'Q', 'K', 'A',\n",
     "                 2, 3, 4, 5, 6, 7, 8, 9, 10, 'J', 'Q', 'K', 'A',\n",
     "                 2, 3, 4, 5, 6, 7, 8, 9, 10, 'J', 'Q', 'K', 'A',\n",
     "                 2, 3, 4, 5, 6, 7, 8, 9, 10, 'J', 'Q', 'K', 'A']\n",
     "\n",
+    "#hit on 8 or less\n",
+    "#stay on 17 or more\n",
+    "#line determined by player's hand score, starting on a 9\n",
+    "#row determined by dealer's hand score, starting on a 2\n",
+    "#H for hit, D for double, S for stand\n",
     "BASIC_STRATEGY = [['H','D','D','D','D','H','H','H','H','H'],\n",
     "                  ['D','D','D','D','D','D','D','D','H','H'],\n",
     "                  ['D','D','D','D','D','D','D','D','D','H'],\n",
@@ -66,8 +72,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#stand on 17\n",
-    "def bj_round():\n",
+    "def bj_round(hit_on_17=False):\n",
+    "    \n",
     "    deck_current = DECK_COMPLETE.copy()\n",
     "    \n",
     "    player_cards = [rand_card(deck_func=deck_current), rand_card(deck_func=deck_current)]\n",
@@ -85,7 +91,7 @@
     "    while game_state == 'Ongoing':\n",
     "        if(player_score<=8):\n",
     "            strategy = 'H'\n",
-    "        elif(player_score>=17):\n",
+    "        elif(player_score>=17+hit_on_17):\n",
     "            strategy = 'S'\n",
     "        else:\n",
     "            strategy = BASIC_STRATEGY[(player_score-9)][(dealer_score-2)]\n",
@@ -109,7 +115,7 @@
     "    if game_state == 'Loss':\n",
     "        return ('Loss', player_score)\n",
     "    \n",
-    "    while((dealer_score<17) ^ (dealer_score ==-1)):\n",
+    "    while((dealer_score<17+hit_on_17) ^ (dealer_score ==-1)):\n",
     "        dealer_cards.append(rand_card(deck_func=deck_current))\n",
     "        dealer_score = score(dealer_cards)\n",
     "    \n",
@@ -124,20 +130,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fb8ca4c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results={'Win':[], 'Draw':[], 'Loss':[]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "8282db82",
    "metadata": {},
    "outputs": [],
    "source": [
+    "results={'Win':[], 'Draw':[], 'Loss':[]}\n",
+    "\n",
     "for _ in range(1000000):\n",
     "    wdl, total = bj_round()\n",
     "    results[wdl].append(total)"
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ef01f30e",
    "metadata": {
     "hide_input": false
@@ -155,66 +153,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "##############\n",
-      "21:21.937%\n",
-      "20:25.144%\n",
-      "19:14.813%\n",
-      "18:11.416%\n",
-      "17:7.892%\n",
-      "16:3.709%\n",
-      "15:3.962%\n",
-      "14:4.039%\n",
-      "13:4.224%\n",
-      "12:2.784%\n",
-      "11:0.08%\n",
-      "##############\n",
-      "21:7.96%\n",
-      "20:32.822%\n",
-      "19:18.313%\n",
-      "18:19.564%\n",
-      "17:21.341%\n",
-      "##############\n",
-      "20:4.026%\n",
-      "19:7.492%\n",
-      "18:11.185%\n",
-      "17:15.426%\n",
-      "16:5.302%\n",
-      "15:5.659%\n",
-      "14:5.687%\n",
-      "13:5.996%\n",
-      "12:3.798%\n",
-      "11:0.107%\n",
-      "-1:35.322%\n"
+      "Win:\n",
+      "21:21.923%\n",
+      "20:25.154%\n",
+      "19:14.764%\n",
+      "18:11.438%\n",
+      "17:7.887%\n",
+      "16:3.718%\n",
+      "15:3.919%\n",
+      "14:4.024%\n",
+      "13:4.267%\n",
+      "12:2.82%\n",
+      "11:0.087%\n",
+      "\n",
+      "\n",
+      "Draw:\n",
+      "21:7.987%\n",
+      "20:32.815%\n",
+      "19:18.27%\n",
+      "18:19.478%\n",
+      "17:21.449%\n",
+      "\n",
+      "\n",
+      "Loss:\n",
+      "20:4.017%\n",
+      "19:7.494%\n",
+      "18:11.045%\n",
+      "17:15.51%\n",
+      "16:5.4%\n",
+      "15:5.591%\n",
+      "14:5.697%\n",
+      "13:5.988%\n",
+      "12:3.823%\n",
+      "11:0.108%\n",
+      "-1:35.327%\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "from collections import Counter\n",
-    "\n",
-    "for wasd in results.values():\n",
-    "    print(\"##############\")\n",
+    "for key, values in results.items():\n",
+    "    print(f\"{key}:\")\n",
     "    \n",
-    "    total=dict(Counter(wasd))\n",
+    "    total=dict(Counter(values))\n",
     "    \n",
     "    sorted_dict = dict(sorted(total.items(), reverse=True))\n",
     "    \n",
     "    for key, value in sorted_dict.items():\n",
-    "        print(f\"{key}:{round(value*100/sum(sorted_dict.values()),3)}%\")      "
+    "        print(f\"{key}:{round(value*100/sum(sorted_dict.values()),3)}%\")  \n",
+    "    print(\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e6baf58d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('Win', 18, 14)"
+       "('Win', 19, 19)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "8b48de42",
    "metadata": {
     "scrolled": true
@@ -289,10 +292,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[18, 16, 15, 14, 14, 10]\n",
-      "[17, 17, 14, 12, 11, 7]\n",
-      "[17, 15, 14, 13, 8, 7]\n",
-      "[17, 16, 16, 13, 7, 7]\n"
+      "[17, 17, 17, 15, 15, 13]\n",
+      "[18, 16, 15, 15, 15, 14]\n",
+      "[16, 14, 14, 14, 14, 13]\n",
+      "[15, 15, 15, 15, 14, 13]\n"
      ]
     }
    ],
@@ -307,17 +310,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "21968c8a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('Win', 0, 20)"
+       "('L', 1)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "10de90f9",
    "metadata": {},
    "outputs": [
@@ -390,10 +393,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[18, 18, 17, 11, 10, 10]\n",
-      "[17, 14, 14, 13, 12, 7]\n",
-      "[17, 13, 12, 12, 11, 7]\n",
-      "[19, 17, 17, 16, 11, 9]\n"
+      "[18, 18, 16, 15, 14, 14]\n",
+      "[16, 15, 7, 7, 7, 7]\n",
+      "[17, 17, 12, 9, 7, 7]\n",
+      "[16, 16, 16, 15, 8, 8]\n"
      ]
     }
    ],
