--- a/bj.ipynb
+++ b/bj.ipynb
@@ -42,25 +42,26 @@
     "    deck_func.remove(card)\n",
     "    return card\n",
     "\n",
+    "\n",
     "def score(cards):\n",
     "    score = 0\n",
     "    possible_hands = []\n",
     "    aces = 0\n",
-    "    \n",
+    "\n",
     "    for x in cards:\n",
     "        if type(x) == int:\n",
     "            score += x\n",
-    "        elif x in ['J', 'Q', 'K']:\n",
+    "        elif x in [\"J\", \"Q\", \"K\"]:\n",
     "            score += 10\n",
     "        else:\n",
     "            score += 1\n",
     "            aces += 1\n",
-    "            \n",
-    "    for i in range(aces+1):\n",
+    "\n",
+    "    for i in range(aces + 1):\n",
     "        if (score + i * 10) <= 21:\n",
     "            possible_hands.append(score + i * 10)\n",
     "\n",
-    "    if(possible_hands) == []:\n",
+    "    if (possible_hands) == []:\n",
     "        return -1\n",
     "    return max(possible_hands)"
    ]
@@ -134,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results={'Win':[], 'Draw':[], 'Loss':[]}\n",
+    "results = {\"Win\": [], \"Draw\": [], \"Loss\": []}\n",
     "\n",
     "for _ in range(1000000):\n",
     "    wdl, total = bj_round()\n",
@@ -195,13 +196,13 @@
    "source": [
     "for key, values in results.items():\n",
     "    print(f\"{key}:\")\n",
-    "    \n",
-    "    total=dict(Counter(values))\n",
-    "    \n",
+    "\n",
+    "    total = dict(Counter(values))\n",
+    "\n",
     "    sorted_dict = dict(sorted(total.items(), reverse=True))\n",
-    "    \n",
+    "\n",
     "    for key, value in sorted_dict.items():\n",
-    "        print(f\"{key}:{round(value*100/sum(sorted_dict.values()),3)}%\")  \n",
+    "        print(f\"{key}:{round(value*100/sum(sorted_dict.values()), 3)}%\")\n",
     "    print(\"\\n\")"
    ]
   },
@@ -225,58 +226,61 @@
    "source": [
     "def bj_round_till_win(cum_loss=0):\n",
     "    deck_current = DECK_COMPLETE.copy()\n",
-    "    \n",
-    "    player_cards = [rand_card(deck_func=deck_current), rand_card(deck_func=deck_current)]\n",
+    "\n",
+    "    player_cards = [\n",
+    "        rand_card(deck_func=deck_current),\n",
+    "        rand_card(deck_func=deck_current),\n",
+    "    ]\n",
     "    player_score = score(player_cards)\n",
     "    dealer_cards = [rand_card(deck_func=deck_current)]\n",
     "    dealer_score = score(dealer_cards)\n",
-    "    \n",
-    "    if(player_score==21):\n",
-    "        return ('Win', 21, 21 + cum_loss)\n",
-    "    \n",
-    "    game_state = 'Ongoing'\n",
-    "    strategy = ''\n",
-    "    double_flag = 0\n",
-    "    \n",
-    "    while game_state == 'Ongoing':\n",
-    "        if(player_score<=8):\n",
-    "            strategy = 'H'\n",
-    "        elif(player_score>=17):\n",
-    "            strategy = 'S'\n",
-    "        else:\n",
-    "            strategy = BASIC_STRATEGY[(player_score-9)][(dealer_score-2)]\n",
     "\n",
-    "        if(strategy=='D'):\n",
+    "    if player_score == 21:\n",
+    "        return (\"Win\", 21, 21 + cum_loss)\n",
+    "\n",
+    "    game_state = \"Ongoing\"\n",
+    "    strategy = \"\"\n",
+    "\n",
+    "    while game_state == \"Ongoing\":\n",
+    "        if player_score <= 8:\n",
+    "            strategy = \"H\"\n",
+    "        elif player_score >= 17:\n",
+    "            strategy = \"S\"\n",
+    "        else:\n",
+    "            strategy = BASIC_STRATEGY[(player_score - 9)][(dealer_score - 2)]\n",
+    "\n",
+    "        if strategy == \"D\":\n",
     "            player_cards.append(rand_card(deck_func=deck_current))\n",
     "            player_score = score(player_cards)\n",
-    "            if(player_score==-1):\n",
+    "            if player_score == -1:\n",
     "                cum_loss += 1\n",
-    "                game_state='L'\n",
+    "                game_state = \"L\"\n",
     "            else:\n",
     "                cum_loss += -1\n",
-    "                game_state='S'\n",
-    "        if(strategy=='H'):\n",
+    "                game_state = \"S\"\n",
+    "        if strategy == \"H\":\n",
     "            player_cards.append(rand_card(deck_func=deck_current))\n",
     "            player_score = score(player_cards)\n",
-    "            if(player_score==-1):\n",
-    "                game_state='L'\n",
-    "        if(strategy=='S'):\n",
-    "            game_state='S'\n",
-    "        \n",
-    "    if game_state == 'Loss':\n",
-    "        return bj_round_till_win(cum_loss=cum_loss-2)\n",
-    "    \n",
-    "    while((dealer_score<17) ^ (dealer_score ==-1)):\n",
+    "            if player_score == -1:\n",
+    "                game_state = \"L\"\n",
+    "        if strategy == \"S\":\n",
+    "            game_state = \"S\"\n",
+    "\n",
+    "    if game_state == \"Loss\":\n",
+    "        return bj_round_till_win(cum_loss=cum_loss - 2)\n",
+    "\n",
+    "    while (dealer_score < 17) ^ (dealer_score == -1):\n",
     "        dealer_cards.append(rand_card(deck_func=deck_current))\n",
     "        dealer_score = score(dealer_cards)\n",
-    "    \n",
-    "    if((player_score > dealer_score) or (dealer_score>21)):\n",
-    "        return ('Win', player_score, player_score + cum_loss)\n",
-    "    elif(player_score == dealer_score):\n",
+    "\n",
+    "    if (player_score > dealer_score) or (dealer_score > 21):\n",
+    "        return (\"Win\", player_score, player_score + cum_loss)\n",
+    "    elif player_score == dealer_score:\n",
     "        return bj_round_till_win(cum_loss=cum_loss)\n",
     "    else:\n",
-    "        return bj_round_till_win(cum_loss=cum_loss-2)\n",
-    "        \n",
+    "        return bj_round_till_win(cum_loss=cum_loss - 2)\n",
+    "\n",
+    "\n",
     "bj_round_till_win()"
    ]
   },
@@ -304,7 +308,7 @@
     "for _ in range(4):\n",
     "    player = []\n",
     "    for _ in range(6):\n",
-    "        player.append(max(bj_round_till_win()[2]-3,7))\n",
+    "        player.append(max(bj_round_till_win()[2] - 3, 7))\n",
     "    print(sorted(player, reverse=True))"
    ]
   },
@@ -328,64 +332,68 @@
    "source": [
     "def bj_round_till_win_2(cum_loss=0):\n",
     "    deck_current = DECK_COMPLETE.copy()\n",
-    "    \n",
-    "    player_cards = [rand_card(deck_func=deck_current), rand_card(deck_func=deck_current)]\n",
+    "\n",
+    "    player_cards = [\n",
+    "        rand_card(deck_func=deck_current),\n",
+    "        rand_card(deck_func=deck_current),\n",
+    "    ]\n",
     "    player_score = score(player_cards)\n",
     "    dealer_cards = [rand_card(deck_func=deck_current)]\n",
     "    dealer_score = score(dealer_cards)\n",
-    "    \n",
-    "    if(player_score==21):\n",
-    "        return ('Win', 21, 21 - cum_loss)\n",
-    "    \n",
-    "    game_state = 'Ongoing'\n",
-    "    strategy = ''\n",
-    "    double_flag = 0\n",
-    "    \n",
-    "    while game_state == 'Ongoing':\n",
-    "        if(player_score<=8):\n",
-    "            strategy = 'H'\n",
-    "        elif(player_score>=17):\n",
-    "            strategy = 'S'\n",
-    "        else:\n",
-    "            strategy = BASIC_STRATEGY[(player_score-9)][(dealer_score-2)]\n",
     "\n",
-    "        if(strategy=='D'):\n",
+    "    if player_score == 21:\n",
+    "        return (\"Win\", 21, 21 - cum_loss)\n",
+    "\n",
+    "    game_state = \"Ongoing\"\n",
+    "    strategy = \"\"\n",
+    "    double_flag = 0\n",
+    "\n",
+    "    while game_state == \"Ongoing\":\n",
+    "        if player_score <= 8:\n",
+    "            strategy = \"H\"\n",
+    "        elif player_score >= 17:\n",
+    "            strategy = \"S\"\n",
+    "        else:\n",
+    "            strategy = BASIC_STRATEGY[(player_score - 9)][(dealer_score - 2)]\n",
+    "\n",
+    "        if strategy == \"D\":\n",
     "            player_cards.append(rand_card(deck_func=deck_current))\n",
     "            player_score = score(player_cards)\n",
-    "            if(player_score==-1):\n",
+    "            if player_score == -1:\n",
     "                cum_loss += 1\n",
-    "                game_state='L'\n",
+    "                game_state = \"L\"\n",
     "            else:\n",
     "                cum_loss += -1\n",
-    "                game_state='S'\n",
-    "        if(strategy=='H'):\n",
+    "                game_state = \"S\"\n",
+    "        if strategy == \"H\":\n",
     "            player_cards.append(rand_card(deck_func=deck_current))\n",
     "            player_score = score(player_cards)\n",
-    "            if(player_score==-1):\n",
-    "                game_state='L'\n",
-    "        if(strategy=='S'):\n",
-    "            game_state='S'\n",
-    "        \n",
-    "    if game_state == 'Loss':\n",
-    "        return ('L', cum_loss-1)\n",
-    "    \n",
-    "    while((dealer_score<17) ^ (dealer_score ==-1)):\n",
+    "            if player_score == -1:\n",
+    "                game_state = \"L\"\n",
+    "        if strategy == \"S\":\n",
+    "            game_state = \"S\"\n",
+    "\n",
+    "    if game_state == \"Loss\":\n",
+    "        return (\"L\", cum_loss - 1)\n",
+    "\n",
+    "    while (dealer_score < 17) ^ (dealer_score == -1):\n",
     "        dealer_cards.append(rand_card(deck_func=deck_current))\n",
     "        dealer_score = score(dealer_cards)\n",
-    "    \n",
-    "    if((player_score > dealer_score) or (dealer_score>21)):\n",
-    "        return ('Win', cum_loss, player_score - cum_loss)\n",
-    "    elif(player_score == dealer_score):\n",
-    "        return ('D', cum_loss)\n",
+    "\n",
+    "    if (player_score > dealer_score) or (dealer_score > 21):\n",
+    "        return (\"Win\", cum_loss, player_score - cum_loss)\n",
+    "    elif player_score == dealer_score:\n",
+    "        return (\"D\", cum_loss)\n",
     "    else:\n",
-    "        return ('L', cum_loss+1)\n",
-    "        \n",
-    "bj_round_till_win_2()"
+    "        return (\"L\", cum_loss + 1)\n",
+    "\n",
+    "\n",
+    "bj_round_till_win_2()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "10de90f9",
    "metadata": {},
    "outputs": [
@@ -393,26 +401,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[18, 18, 16, 15, 14, 14]\n",
-      "[16, 15, 7, 7, 7, 7]\n",
-      "[17, 17, 12, 9, 7, 7]\n",
-      "[16, 16, 16, 15, 8, 8]\n"
+      "[16, 14, 11, 9, 9, 8]\n",
+      "[17, 17, 16, 12, 7, 7]\n",
+      "[17, 7, 7, 7, 7, 7]\n",
+      "[18, 16, 16, 14, 14, 14]\n"
      ]
     }
    ],
    "source": [
     "#min score 7\n",
     "for _ in range(4):\n",
-    "    cum_loss=0\n",
+    "    cum_loss = 0\n",
     "    player = []\n",
-    "    while(len(player)<6):\n",
-    "        \n",
+    "    while len(player) < 6:\n",
+    "\n",
     "        game = bj_round_till_win_2(cum_loss)\n",
     "        cum_loss = game[1]\n",
-    "        \n",
-    "        if(game[0]=='Win'):            \n",
-    "            player.append(max(game[2]-3,7))\n",
-    "        \n",
+    "\n",
+    "        if game[0] == \"Win\":\n",
+    "            player.append(max(game[2] - 3, 7))\n",
+    "\n",
     "    print(sorted(player, reverse=True))"
    ]
   }
