--- a/bj.ipynb
+++ b/bj.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "ef01f30e",
    "metadata": {
     "hide_input": false
@@ -155,40 +155,37 @@
      "output_type": "stream",
      "text": [
       "Win:\n",
-      "21:21.923%\n",
-      "20:25.154%\n",
-      "19:14.764%\n",
-      "18:11.438%\n",
-      "17:7.887%\n",
-      "16:3.718%\n",
-      "15:3.919%\n",
-      "14:4.024%\n",
+      "21:22.033%\n",
+      "20:25.215%\n",
+      "19:14.712%\n",
+      "18:11.359%\n",
+      "17:7.912%\n",
+      "16:3.744%\n",
+      "15:3.891%\n",
+      "14:3.968%\n",
       "13:4.267%\n",
-      "12:2.82%\n",
-      "11:0.087%\n",
-      "\n",
+      "12:2.817%\n",
+      "11:0.08%\n",
       "\n",
       "Draw:\n",
-      "21:7.987%\n",
-      "20:32.815%\n",
-      "19:18.27%\n",
-      "18:19.478%\n",
-      "17:21.449%\n",
-      "\n",
+      "21:8.218%\n",
+      "20:33.062%\n",
+      "19:18.155%\n",
+      "18:19.283%\n",
+      "17:21.283%\n",
       "\n",
       "Loss:\n",
-      "20:4.017%\n",
-      "19:7.494%\n",
-      "18:11.045%\n",
-      "17:15.51%\n",
-      "16:5.4%\n",
-      "15:5.591%\n",
-      "14:5.697%\n",
-      "13:5.988%\n",
-      "12:3.823%\n",
-      "11:0.108%\n",
-      "-1:35.327%\n",
-      "\n",
+      "20:4.01%\n",
+      "19:7.467%\n",
+      "18:11.096%\n",
+      "17:15.591%\n",
+      "16:5.356%\n",
+      "15:5.553%\n",
+      "14:5.661%\n",
+      "13:6.026%\n",
+      "12:3.78%\n",
+      "11:0.107%\n",
+      "-1:35.353%\n",
       "\n"
      ]
     }
@@ -203,7 +200,7 @@
     "\n",
     "    for key, value in sorted_dict.items():\n",
     "        print(f\"{key}:{round(value*100/sum(sorted_dict.values()), 3)}%\")\n",
-    "    print(\"\\n\")"
+    "    print(\"\")"
    ]
   },
   {
@@ -215,7 +212,7 @@
     {
      "data": {
       "text/plain": [
-       "('Win', 19, 19)"
+       "('Win', 19, 13)"
       ]
      },
      "execution_count": 6,
@@ -286,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "8b48de42",
    "metadata": {
     "scrolled": true
@@ -296,10 +293,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[17, 17, 17, 15, 15, 13]\n",
-      "[18, 16, 15, 15, 15, 14]\n",
-      "[16, 14, 14, 14, 14, 13]\n",
-      "[15, 15, 15, 15, 14, 13]\n"
+      "[16, 16, 15, 15, 11, 10]\n",
+      "[18, 16, 10, 10, 8, 7]\n",
+      "[18, 17, 13, 13, 8, 7]\n",
+      "[17, 15, 11, 10, 9, 7]\n"
      ]
     }
    ],
@@ -321,7 +318,7 @@
     {
      "data": {
       "text/plain": [
-       "('L', 1)"
+       "('Win', 21, 21)"
       ]
      },
      "execution_count": 8,
@@ -393,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "10de90f9",
    "metadata": {},
    "outputs": [
@@ -401,10 +398,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[16, 14, 11, 9, 9, 8]\n",
-      "[17, 17, 16, 12, 7, 7]\n",
-      "[17, 7, 7, 7, 7, 7]\n",
-      "[18, 16, 16, 14, 14, 14]\n"
+      "[17, 13, 13, 12, 12, 10]\n",
+      "[16, 16, 7, 7, 7, 7]\n",
+      "[17, 17, 16, 16, 15, 13]\n",
+      "[17, 15, 13, 7, 7, 7]\n"
      ]
     }
    ],
